// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-n5rw8o-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="width: 100px;"
  >
    <div
      class="cache-n5rw8o-StyledText e1tg3t120"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Body" 1`] = `
<DocumentFragment>
  .cache-njr7lc-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-njr7lc-StyledText e1tg3t120"
  >
    Body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmall" 1`] = `
<DocumentFragment>
  .cache-v7gdvj-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-v7gdvj-StyledText e1tg3t120"
  >
    BodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-djxxrc-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-djxxrc-StyledText e1tg3t120"
  >
    BodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodySmallWeak" 1`] = `
<DocumentFragment>
  .cache-c11egn-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-c11egn-StyledText e1tg3t120"
  >
    BodySmallWeak
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="BodyStrong" 1`] = `
<DocumentFragment>
  .cache-1lw91cn-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1lw91cn-StyledText e1tg3t120"
  >
    BodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Caption" 1`] = `
<DocumentFragment>
  .cache-wz2ijz-StyledText {
  color: #4a4f62;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-wz2ijz-StyledText e1tg3t120"
  >
    Caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="CaptionSmall" 1`] = `
<DocumentFragment>
  .cache-11eogpa-StyledText {
  color: #4a4f62;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-11eogpa-StyledText e1tg3t120"
  >
    CaptionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="Heading" 1`] = `
<DocumentFragment>
  .cache-1i7o5rf-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1i7o5rf-StyledText e1tg3t120"
  >
    Heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="HeadingLarge" 1`] = `
<DocumentFragment>
  .cache-y9xkpl-StyledText {
  color: #4a4f62;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 48px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-y9xkpl-StyledText e1tg3t120"
  >
    HeadingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="HeadingSmall" 1`] = `
<DocumentFragment>
  .cache-r91y3n-StyledText {
  color: #4a4f62;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-r91y3n-StyledText e1tg3t120"
  >
    HeadingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-njr7lc-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1i7o5rf-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0%;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-njr7lc-StyledText e1tg3t120"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-1i7o5rf-StyledText e1tg3t120"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;
